--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Homepage: http://raspberrypi.com/
 Package: lxplug-bluetooth
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- lxpanel-pi
+ lxpanel-pi, pplug-bluetooth-data
 Recommends: pulseaudio-module-bluetooth | bluealsa, pi-bluetooth
 Description: Bluetooth plugin for lxpanel
  Plugin for lxpanel to control pairing and connection of Bluetooth devices.
@@ -21,7 +21,13 @@ Description: Bluetooth plugin for lxpanel
 Package: wfplug-bluetooth
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
-  wf-panel-pi (>=0.92)
+  wf-panel-pi (>=0.92), pplug-bluetooth-data
 Recommends: pulseaudio-module-bluetooth | bluealsa, pi-bluetooth
 Description: Bluetooth plugin for wf-panel-pi
  Plugin for wf-panel-pi to control pairing and connection of Bluetooth devices.
+
+Package: pplug-bluetooth-data
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends},
+Description: Bluetooth plugin for lxpanel - data
+ Data for Bluetooth plugin
